gitlab-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: gitlab-ce
  name: gitlab-ce
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: gitlab-ce
    deploymentconfig: gitlab-ce
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab-ce
        deploymentconfig: gitlab-ce
    spec:
      containers:
      - env:
        - name: GITLAB_OMNIBUS_CONFIG
          value: external_url "https://gitlab.apps.oshift-svc.convergelabs.us/";
            nginx['redirect_http_to_https'] = false; nginx['redirect_http_to_https_port']
            = 80; nginx['listen_port'] = 80; nginx['listen_https'] = false; registry_nginx['redirect_http_to_https']
            = false; mattermost_nginx['redirect_http_to_https'] = false; gitlab_rails['gitlab_https']=false;
            gitlab_rails['gitlab_port']=80; root_pass='password'; gitlab_rails['initial_root_password']=root_pass;
            postgresql['enable']=false; gitlab_rails['db_host'] = 'gitlab-ce-postgresql';
            gitlab_rails['db_password']='i6Typpogyhg81VQc'; gitlab_rails['db_username']='userYPQ';
            gitlab_rails['db_database']='gitlabhq_production'; redis['enable'] = false;
            gitlab_rails['redis_host']='gitlab-ce-redis'; unicorn['worker_processes']
            = 2; manage_accounts['enable'] = true; manage_storage_directories['manage_etc']
            = false; gitlab_shell['auth_file'] = '/gitlab-data/ssh/authorized_keys';
            git_data_dirs({ 'default' => { 'path' => '/gitlab-data/git-data' } });
            gitlab_rails['shared_path'] = '/gitlab-data/shared'; gitlab_rails['uploads_directory']
            = '/gitlab-data/uploads'; gitlab_ci['builds_directory'] = '/gitlab-data/builds';
            prometheus_monitoring['enable'] = false; gitlab_rails['ldap_enabled']
            = false; gitlab_rails['rack_attack_git_basic_auth'] = { 'enabled' => false,
            };
        imagePullPolicy: IfNotPresent
        name: gitlab-ce
        ports:
        - containerPort: 22
          protocol: TCP
        - containerPort: 80
          protocol: TCP
        - containerPort: 443
          protocol: TCP
        resources:
          limits:
            cpu: "2"
            memory: 6Gi
          requests:
            cpu: 500m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/gitlab
          name: gitlab-ce-volume-1
        - mountPath: /gitlab-data
          name: gitlab-ce-volume-2
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: gitlab-ce-user
      serviceAccountName: gitlab-ce-user
      terminationGracePeriodSeconds: 30
      volumes:
      - name: gitlab-ce-volume-1
        persistentVolumeClaim:
          claimName: gitlab-ce-etc
      - name: gitlab-ce-volume-2
        persistentVolumeClaim:
          claimName: gitlab-ce-data
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - gitlab-ce
      from:
        kind: ImageStreamTag
        name: gitlab-ce:gitlab-12.10.14
        namespace: gitlab
    type: ImageChange
